--- a/index.html
+++ b/index.html
@@ -36,12 +36,15 @@
       </div>
     <div class="form-group">
         <label for="message">Message <span>*</span></label>
-        <textarea id="message" rows="2" required></textarea>
+        <textarea id="message" rows="2" This field is required></textarea>
     </div>
     <div class="form-group checkbox-group">
-        <label for="consent">I consent to being contacted by the team <span>*</span></label>
-        <input type="checkbox" name="checkbox" To submit this form, please consent to being contacted>
-    </div>
+  <label>
+    <input type="checkbox" id="consent" name="checkbox" To submit this form, please consent to being contacted required />
+    I consent to being contacted by the team <span>*</span>
+  </label>
+</div>
+
         <button type="submit">Submit</button>
 
     </form>
